--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
   <!-- Scattered Parts of the Streaming URL with Token -->
   <script>
     const base1 = "https://";
-    const base2 = "puc2.mylife1.top:8088";
+    const base2 = "65.scjustfor.info";
     const path1 = "/mobile";
-    const path2 = "/stream3_160p";
+    const path2 = "/stream1_160p";
     const file = "/playlist.m3u8";
-    const query1 = "?vidictid=200856231236";
-    const query2 = "&id=9";
-    const query3 = "&pk=2432fdc6b4e92b82b01e26bb2534a1394d45257ff0837280ace35cc4e1d8ad385eb9f5ceaabf87c314a85ddc510a34f03493799a1fb4cd3ebda4a907aa18eb87";
+    const query1 = "?vidictid=200864094939";
+    const query2 = "&id=2";
+    const query3 = "&pk=ab01872885bf783fa10435b1c32171a11e86ee66fc1b5805b6d4bbda722c52b7";
     const token = generateToken();  // A function to generate a secure token
 
     function generateToken() {
