--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
   <!-- Scattered Parts of the Streaming URL with Token -->
   <script>
     const base1 = "https://";
-    const base2 = "65.scjustfor.info";
+    const base2 = "puc2.mylife1.top:8088";
     const path1 = "/mobile";
     const path2 = "/stream1_160p";
     const file = "/playlist.m3u8";
-    const query1 = "?vidictid=200864094939";
-    const query2 = "&id=2";
-    const query3 = "&pk=ab01872885bf783fa10435b1c32171a11e86ee66fc1b5805b6d4bbda722c52b7";
+    const query1 = "?vidictid=200861166167";
+    const query2 = "&id=1";
+    const query3 = "&pk=6a3d4b6e4fb556a523fff2ad100f73bdb8a87c3356ee2e2f0b250c93355e2b321a2d92121fcf003391716e481d8a90803237092398bff140f51102bb7c80e3b0";
     const token = generateToken();  // A function to generate a secure token
 
     function generateToken() {
